convert script to module

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ td {
 </div>
 
 <script src="build/pdf.js"></script>
-<script src="pdf-table-extractor.js"></script>
+<script type="module" src="pdf-table-extractor.js"></script>
 <script id="script">
 var drop = document.getElementById('drop');
 function handleDrop(e) {
