comment out progress

--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@ $('#csv-select').change(function(){
     $('#csv-result').val(array_to_csv($('#csv-select option:selected').data('data').tables));
 });
 
-pdf_table_extractor_progress = function(result){
-    $('#json-result').text("Parsing PDF, progress: " + result.currentPages + " / " + result.numPages + " pages");
-};
+// pdf_table_extractor_progress = function(result){
+//     $('#json-result').text("Parsing PDF, progress: " + result.currentPages + " / " + result.numPages + " pages");
+// };
 
 var parse_content = function(content){
     pdfjsLib.GlobalWorkerOptions.workerSrc = 'build/pdf.worker.js';
